--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,6 +40,14 @@
        android:id="@+id/noIconsFoundTv"
        android:layout_centerInParent="true"/>
 
+   <ImageView
+       android:layout_width="100dp"
+       android:layout_height="100dp"
+       android:layout_centerInParent="true"
+       android:src="@drawable/ic_baseline_image_search_24"
+       android:alpha="0.7"
+       android:id="@+id/searchbackground"></ImageView>
+
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
